<resources>
    <string name="app_name">Meals On Wheels</string>


    //Headings
    <string name="heading_one_a">Zero</string>
    <string name="heading_one_b">Community</string>
    <string name="heading_one_c">Meals On Wheels</string>
    <string name="heading_two_a">Food Wastage</string>
    <string name="heading_two_b">Kitchen</string>
    <string name="heading_two_c">India</string>


    //Description
    <string name="desc_one">Not to waste our basic need, food and helping communities to grow together.</string>
    <string name="desc_two">Cooking Food everyday and serving it to ensure the Health Index doesn\'t go low for India.</string>
    <string name="desc_three">Ensuring no stomach would stay hungry at Hospitals and Railway platforms.</string>

    //About Us Text

    <string name="about_us_first"> BDF envisages an inclusive and nurturing society and seeks to achieve this by developing and implementing innovative social welfare programmes which have a lasting positive impact on the lives of the most vulnerable populations. Our dream is to build a new India where people have the power to create opportunities for themselves and their communities.
Our goal is to empower people and transform their lives by providing them with food, education, healthcare, and other resources essential to their livelihood.</string>

    <string name="about_us_second">"Helping People To Help Themselves Grow" is the abiding motto of BDF.</string>

    <string name="about_us_third">Since its inception, BDF has taken an initiative to enroll 35 dropout students in government schools under our "Back To School Program."
        234 hunger drives have been conducted, whereby 7,00,000 free meals were distributed, reaching over 37,000 people.
        The effort has been possible by way of collection of surplus food from celebrations or functions and accepting food grain donations from a mindful givers and generous donors.
        Work through collection of surplus food from celebrations or functions, accepting food grain donations from our mindful givers and heartful donors.
        We also conduct Happiness Drives where people celebrate their birthdays with children for a cause. In this way, we try to ensure that nobody, particularly children, do not go to bed hungry.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    // Privacy Policy Text
    <string name="privacy_policy_first">This privacy notice for Building Dreams Foundation ("Company," "we," "us," or "our"), describes how and why we might collect, store, use, and/or share ("process") your information when you use our services ("Services"), such as when you: <br />
	Download and use our mobile application (AAHARAH(Meals on Wheels)- Hate Waste , Love Serve), or any other application of ours that links to this privacy notice <br />
	Engage with us in other related ways, including any sales, marketing, or events
</string>
    <string name="privacy_policy_second">Questions or concerns? Reading this privacy notice will help you understand your privacy rights and choices. If you do not agree with our policies and practices, please do not use our Services. If you still have any questions or concerns, please contact us at contact@bdf.ngo.</string>
    <string name="privacy_policy_third"><b>SUMMARY OF KEY POINTS <br />

This summary provides key points from our privacy notice, but you can find out more details about any of these topics by clicking the link following each key point or by using our table of contents below to find the section you are looking for. You can also click here to go directly to our table of contents.<br />

What personal information do we process?</b>When you visit, use, or navigate our Services, we may process personal information depending on how you interact with Building Dreams Foundation and the Services, the choices you make, and the products and features you use. <br />
        <b>Do we process any sensitive personal information?</b>We do not process sensitive personal information.<br />
        <b>Do we receive any information from third parties? </b>We do not receive any information from third parties.<br />
        <b>How do we process your information?</b>We process your information to provide, improve, and administer our Services, communicate with you, for security and fraud prevention, and to comply with law. We may also process your information for other purposes with your consent. We process your information only when we have a valid legal reason to do so.<br />
        <b>In what situations and with which parties do we share personal information?</b>? We may share information in specific situations and with specific third parties. Click here to learn more.<br />

    </string>


</resources>