<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue"
    tools:context=".PrivacyPolicyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/privacy_policy_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="Privacy Policy"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="40dp"/>

        <TextView
            android:id="@+id/privacy_policy_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_policy_heading"
            android:text="@string/privacy_policy_first"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/privacy_policy_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_policy_text1"
            android:text="@string/privacy_policy_second"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/privacy_policy_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_policy_text2"
            android:text="@string/privacy_policy_third"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>





    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>