<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue"
    tools:context=".AboutUsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/about_us_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="About Us"
            android:textColor="@color/white"
            android:textSize="40dp"/>

        <TextView
            android:id="@+id/about_us_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us_heading"
            android:text="@string/about_us_first"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/about_us_text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us_text1"
            android:text="@string/about_us_second"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/about_us_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us_text2"
            android:text="@string/about_us_third"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/about_us_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us_text3"
            android:text="Connect with us on social media"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/about_us_text4">

            <Button
                android:id="@+id/facebook_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/facebook_icon"/>
            <Button
                android:id="@+id/insta_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/insta_icon"
                android:layout_marginLeft="20dp"/>
            <Button
                android:id="@+id/linkedin_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/linkedin_icon"
                android:layout_marginLeft="20dp"/>
            <Button
                android:id="@+id/yt_btn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="@drawable/youtube_icon"
                android:layout_marginLeft="20dp"/>
            <Button
                android:id="@+id/twitter_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/twitter_icon"
                android:layout_marginLeft="20dp"/>


        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>







</ScrollView>